# vfox-desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: config.rs  mod.rs  plugin.rs  sdk.rs  system.rs  updater.rs
src-tauri/src/config/: mod.rs  model.rs
src-tauri/src/vfox/: mod.rs  parser.rs  runner.rs  state.rs  types.rs
src/api/: index.ts
src/components/: AppLayout.vue  AppSidebar.vue  InstallProgressDialog.vue
src/router/: index.ts
src/stores/: app.ts  vfox.ts
src/types/: index.ts
src/views/: ConfigView.vue  NotInstalledView.vue  PluginsView.vue  SdkView.vue  SettingsView.vue
