[package]
name = "vfox-desktop"
version = "0.1.0"
description = "vfox 桌面管理软件"
authors = ["vfox-desktop"]
edition = "2021"

[lib]
# `_lib` 后缀避免与 bin name 冲突（Windows 限制）
name = "vfox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# 异步进程 / 任务
tokio = { version = "1", features = ["full"] }
# 错误与日志
anyhow = "1"
thiserror = "2"
# 路径定位（跨平台 user home）
dirs = "6"
# 兜底 ANSI 处理（理论上 NO_COLOR 已足够，但保险）
strip-ansi-escapes = "0.2"
# 后续插件市场可能需要正则提取
regex = "1"
